# rust-hub-cli

./: Cargo.toml  README.md
src/: main.rs
