[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
reqwest = { version = "0.11.4", features = ["json"] } 
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
